--- a/Buscador/resp_buscador.html
+++ b/Buscador/resp_buscador.html
@@ -5,10 +5,13 @@
     <title>Página sin resultados - MediUA</title>
 </head>
 <body>
+    <header>
+        <h1><a href="../index.html">MediUA</a></h1>
+    </header>
     <main>
-    <h1>Sin resultados</h1>
-    <p>La búsqueda no ha producido resultados para el criterio de búsqueda empleado, pruebe a realizar otra búsqueda</p>
-    <a href="contacto.html">Volver al buscador</a>
+    <h2>Sin resultados</h2>
+    <p>La búsqueda no ha producido resultados para el criterio de búsqueda empleado, pruebe a realizar otra búsqueda.</p>
+    <a href="buscador.html">Volver al buscador de términos médicos</a>
     </main>
     <footer>
       <p>&copy; 2025 MediUA. Todos los derechos reservados.</p>
@@ -17,7 +20,7 @@
         Correos: pss78@alu.ua.es y esp96@alu.ua.es<br>
         Dirección: Carr. de San Vicente del Raspeig
       </address>
-      <a href="../../index.html">Volver a la página principal</a>
+      <a href="../index.html">Volver a la página principal</a>
     </footer>
 </body>
 </html>
