--- a/Contacto/resp_contacto.html
+++ b/Contacto/resp_contacto.html
@@ -5,9 +5,12 @@
     <title>Página de confirmación - MediUA</title>
 </head>
 <body>
+    <header>
+        <h1><a href="../index.html">MediUA</a></h1>
+    </header>
     <main>
-    <h1>Consulta recibida</h1>
-    <p>Hemos recibido su consulta, en breve nos pondremos en contacto para proporcionarle una respuesta</p>
+    <h2>Consulta recibida</h2>
+    <p>Hemos recibido su consulta, en breve nos pondremos en contacto para proporcionarle una respuesta.</p>
     <a href="contacto.html">Volver a la página de contacto</a>
     </main>
     <footer>
@@ -17,7 +20,7 @@
         Correos: pss78@alu.ua.es y esp96@alu.ua.es<br>
         Dirección: Carr. de San Vicente del Raspeig
       </address>
-      <a href="../../index.html">Volver a la página principal</a>
+      <a href="../index.html">Volver a la página principal</a>
     </footer>
 </body>
 </html>
