--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main>
         <h2>Bienvenido a a la página principal de MediUA</h2>
         <p>MediUA es una enciclopedia médica digital diseñada para ofrecer información clara, confiable y accesible sobre una amplia variedad de temas relacionados con la salud. Su objetivo principal es acercar el conocimiento médico tanto a profesionales como a estudiantes y público general, combinando rigor científico con un lenguaje comprensible.</p>
+        <h3><a href="Buscador/buscador.html">Buscador de términos médicos</a></h3>
         <h3>Índice alfabético:</h3>
         <nav>
             <ul>
@@ -58,6 +59,9 @@
         </figure>
         <p>Un neumotórax es un <mark>colapso pulmonar</mark>. Un neumotórax se produce cuando el aire se filtra dentro del espacio que se encuentra entre los pulmones y la pared torácica. El aire hace presión en la parte externa del pulmón y causa el colapso. Un neumotórax puede ser un colapso pulmonar completo o un colapso de solo una parte del pulmón. <a href="https://www.mayoclinic.org/es/diseases-conditions/pneumothorax/symptoms-causes/syc-20350367">Seguir leyendo sobre el neumotórax</a></p>
     </aside>
+    <section>
+        <h3><a href="Contacto/contacto.html">Página de contacto</a></h3>
+    </section>
     <footer>
         <p>&copy; 2025 MediUA. Todos los derechos reservados.</p>
         <address>
