--- a/B/PatologiasB/bruxismo.html
+++ b/B/PatologiasB/bruxismo.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Bruxismo - MediUA</title>
+    <style>
+        table, tr, th, td {
+        border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -61,12 +66,51 @@
         </ul>
     </section>
     <section>
-        <h2>Expectativas</h2>
+        <h3>Pronóstico</h3>
         <p>Con un tratamiento adecuado, la mayoría de los pacientes logra reducir significativamente los síntomas y prevenir daños dentales. Sin embargo, el bruxismo puede ser recurrente, especialmente si los factores desencadenantes, como el estrés, no se controlan. La educación sobre hábitos saludables y revisiones dentales periódicas son clave para un manejo efectivo.</p>
+    </section>
+    <section>
+        <h3>Datos y estadísticas</h3>
+        <p>El bruxismo afecta aproximadamente al 8-31% de la población mundial, siendo más común en adultos jóvenes. Se estima que alrededor del 20% de los adultos experimentan bruxismo en algún momento de su vida. El estrés es uno de los factores más comunes asociados con esta condición.</p>
+        <table>
+            <caption>Bruxismo en España: prevalencia por síntomas y género. Estudio realizado a 10.000 personas.</caption>
+            <thead>
+                <tr>
+                    <th scope="col"></th>
+                    <th colspan="3" scope="colgroup">Género</th>
+                </tr>
+                <tr>
+                    <th id="sintomas" scope="col">Síntomas</th>
+                    <th id="hombres" scope="col">Hombres</th>
+                    <th id="mujeres" scope="col">Mujeres</th>
+                    <th id="otros" scope="col">Otros</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th id="estres" scope="row">Estrés</th>
+                    <td headers="estres hombres">2.450</td>
+                    <td headers="estres mujeres">3.120</td>
+                    <td headers="estres otros">280</td>
+                </tr>
+                <tr>
+                    <th id="alineacion" scope="row">Mala alineación dental</th>
+                    <td headers="alineacion hombres">1.780</td>
+                    <td headers="alineacion mujeres">1.950</td>
+                    <td headers="alineacion otros">150</td>
+                </tr>
+                <tr>
+                    <th id="sueno" scope="row">Trastornos del sueño</th>
+                    <td headers="sueno hombres">1.560</td>
+                    <td headers="sueno mujeres">1.890</td>
+                    <td headers="sueno otros">220</td>
+                </tr>
+            </tbody>
+        </table>
     </section>
     </article>
     <nav>
-     <a href="../indexb.html">Volver a Índice B</a>
+     <p><a href="../indexb.html">Volver a Índice B</a></p>
     </nav>
     <footer>
         <p>&copy; 2025 MediUA. Todos los derechos reservados.</p>
