--- a/Complementario/constantes.html
+++ b/Complementario/constantes.html
@@ -36,7 +36,7 @@
                 <tbody>
                     <tr>
                         <th id="alto" scope="row">Alto</th>
-                        <td headers="alto pa">&gt; 140/90 <abbr title="milímetros de mercurio">mmHg</abbr></td>
+                        <td headers="alto pa">&gt; 140/90 <abbr title="milímetros de mercurio">mmHg</abbr></td> <!--Preguntar por qué los símbolos y las abreviaturas no son leídas por el lector de pantalla-->
                         <td headers="alto fc">&gt; 100 <abbr title="latidos por minuto">lpm</abbr></td>
                         <td headers="alto ig">&gt; 126 <abbr title="miligramos por decilitro">mg/dL</abbr></td>
                         <td headers="alto o2">&gt; 95 <abbr title="por ciento">%</abbr></td>
@@ -45,10 +45,10 @@
                     <tr>
                         <th id="normal" scope="row">Normal</th>
                         <td headers="normal pa">120/80 <abbr title="milímetros de mercurio">mmHg</abbr></td>
-                        <td headers="normal fc">60–100 <abbr title="latidos por minuto">lpm</abbr></td>
-                        <td headers="normal ig">70–100 <abbr title="miligramos por decilitro">mg/dL</abbr></td>
-                        <td headers="normal o2">95–100 <abbr title="por ciento">%</abbr></td>
-                        <td headers="normal temp">36–37.5 <abbr title="grados Celsius">°C</abbr></td>
+                        <td headers="normal fc">60&ndash;100 <abbr title="latidos por minuto">lpm</abbr></td>
+                        <td headers="normal ig">70&ndash;100 <abbr title="miligramos por decilitro">mg/dL</abbr></td>
+                        <td headers="normal o2">95&ndash;100 <abbr title="por ciento">%</abbr></td>
+                        <td headers="normal temp">36&ndash;37.5 <abbr title="grados Celsius">°C</abbr></td>
                     </tr>
                     <tr>
                         <th id="bajo" scope="row">Bajo</th>
