--- a/A/PatologiasA/anafilaxia.html
+++ b/A/PatologiasA/anafilaxia.html
@@ -3,15 +3,26 @@
   <head>
     <meta charset="UTF-8">
     <title>Anafilaxia - MediUA</title>
+    <link rel="stylesheet" href="../../CSS/migas.css">
   </head>
   <body>
     <header>
       <h1><a href="../../index.html">MediUA</a></h1>
     </header>
+    <div class="breadcrumb-container">
+        <span class="breadcrumb-label">Estás en:</span>
+        <nav aria-label="migas de pan">
+            <ol class="breadcrumbs">
+                <li class="breadcrumb-item"><a href="../../index.html">Enciclopedia médica</a></li>
+                <li class="breadcrumb-item"><a href="../indexa.html">Enciclopedia médica: A</a></li>
+                <li class="breadcrumb-item">Anafilaxia</li>
+            </ol>
+        </nav>
+    </div>
     <article>
       <h2>Anafilaxia</h2>
       <figure>
-            <img src="../../Imagenes/anafilaxia.jpg" alt="Imagen de una persona con anafilaxia">
+            <img src="../../Imagenes/anafilaxia.jpg" alt="Persona con anafilaxia">
             <figcaption>Irritación cutánea en el cuello debido a la anafilaxia</figcaption>
       </figure>
       <section>
@@ -67,7 +78,7 @@
         <p>Con intervención rápida y adecuada, la mayoría de los episodios de anafilaxia se resuelven sin complicaciones graves. Sin embargo, la recurrencia es posible si la persona se expone nuevamente al alérgeno. La educación sobre prevención y el reconocimiento temprano de síntomas son fundamentales para reducir riesgos.</p>
       </section>
     </article>
-    <nav>
+    <nav aria-label="Navegación de regreso a índice A">
     <a href="../indexa.html">Volver a Índice A</a>
     </nav>
     <footer>
