--- a/Buscador/resp_buscador.html
+++ b/Buscador/resp_buscador.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Página sin resultados - MediUA</title>
+    <link rel="stylesheet" href="../CSS/migas.css">
 </head>
 <body>
     <header>
         <h1><a href="../index.html">MediUA</a></h1>
     </header>
+    <div class="breadcrumb-container">
+        <span class="breadcrumb-label">Estás en:</span>
+        <nav aria-label="migas de pan">
+            <ol class="breadcrumbs">
+                <li class="breadcrumb-item"><a href="../index.html">Enciclopedia médica</a></li>
+                <li class="breadcrumb-item"><a href="buscador.html">Buscador de términos médicos</a></li>
+                <li class="breadcrumb-item">Resultados de la búsqueda</li>
+            </ol>
+        </nav>
+    </div>
     <main>
     <h2>Sin resultados</h2>
     <p>La búsqueda no ha producido resultados para el criterio de búsqueda empleado, pruebe a realizar otra búsqueda.</p>
