--- a/Contacto/resp_contacto.html
+++ b/Contacto/resp_contacto.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Página de confirmación - MediUA</title>
+    <link rel="stylesheet" href="../CSS/migas.css">
 </head>
 <body>
     <header>
         <h1><a href="../index.html">MediUA</a></h1>
     </header>
+    <div class="breadcrumb-container">
+        <span class="breadcrumb-label">Estás en:</span>
+        <nav aria-label="migas de pan">
+            <ol class="breadcrumbs">
+                <li class="breadcrumb-item"><a href="../index.html">Enciclopedia médica</a></li>
+                <li class="breadcrumb-item"><a href="contacto.html">Página de contacto</a></li>
+                <li class="breadcrumb-item">Página de confirmación</li>
+            </ol>
+        </nav>
+    </div>
     <main>
     <h2>Consulta recibida</h2>
     <p>Hemos recibido su consulta, en breve nos pondremos en contacto para proporcionarle una respuesta.</p>
