--- a/Usuario/resp_perfil.html
+++ b/Usuario/resp_perfil.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Perfil creado - MediUA</title>
+    <link rel="stylesheet" href="../CSS/migas.css">
 </head>
 <body>
     <header>
         <h1><a href="../index.html">MediUA</a></h1>
     </header>
+    <div class="breadcrumb-container">
+        <span class="breadcrumb-label">Estás en:</span>
+        <nav aria-label="migas de pan">
+            <ol class="breadcrumbs">
+                <li class="breadcrumb-item"><a href="../index.html">Enciclopedia médica</a></li>
+                <li class="breadcrumb-item"><a href="perfil.html">Perfil de usuario</a></li>
+                <li class="breadcrumb-item">Perfil creado</li>
+            </ol>
+        </nav>
+    </div>
     <main>
     <h2>Perfil creado correctamente</h2>
     <p>Tu perfil ha sido registrado correctamente en nuestro sistema. A partir de ahora podrás acceder a todas las funcionalidades disponibles. ¡Gracias por unirte, nos alegra tenerte con nosotros!</p>
