--- a/A/indexa.html
+++ b/A/indexa.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Índice A - MediUA</title>
+    <link rel="stylesheet" href="../CSS/migas.css">
 </head>
 <body>
     <header>
     <h1><a href="../index.html">MediUA</a></h1>
     </header>
+    <div class="breadcrumb-container">
+        <span class="breadcrumb-label">Estás en:</span> <!--Etiqueta para lectores de pantalla y para que esté todo en una misma línea-->
+        <nav aria-label="migas de pan">
+            <ol class="breadcrumbs">
+                <li class="breadcrumb-item"><a href="../index.html">Enciclopedia médica</a></li>
+                <li class="breadcrumb-item">Enciclopedia médica: A</li>
+            </ol>
+        </nav>
+    </div>
     <main>
     <h2>Enciclopedia médica: A</h2>
     <ul>
