--- a/B/PatologiasB/bruxismo.html
+++ b/B/PatologiasB/bruxismo.html
@@ -8,20 +8,32 @@
         border: 1px solid black;
         }
     </style>
+    <link rel="stylesheet" href="../../CSS/migas.css">
 </head>
 <body>
     <header>
         <h1><a href="../../index.html">MediUA</a></h1>
     </header>
+    <div class="breadcrumb-container">
+        <span class="breadcrumb-label">Estás en:</span>
+        <nav aria-label="migas de pan">
+            <ol class="breadcrumbs">
+                <li class="breadcrumb-item"><a href="../../index.html">Enciclopedia médica</a></li>
+                <li class="breadcrumb-item"><a href="../indexb.html">Enciclopedia médica: B</a></li>
+                <li class="breadcrumb-item">Bruxismo</li>
+            </ol>
+        </nav>
+    </div>
     <article>
     <h2>Bruxismo</h2>
     <figure>
-        <img src="../../Imagenes/bruxismo.jpg" alt="Imagen de una persona con bruxismo">
+        <img src="../../Imagenes/bruxismo.jpg" alt="Persona con bruxismo">
         <figcaption>Persona apretando los dientes debido al bruxismo</figcaption>
     </figure>
     <section>
         <h3>Descripción</h3>
-        <p>El bruxismo es el hábito involuntario de apretar o rechinar los dientes, generalmente durante el sueño, aunque también puede ocurrir durante el día. Esta condición puede causar desgaste dental, dolor facial y problemas en la mandíbula si no se trata adecuadamente.</p>
+        <p>El bruxismo es el hábito involuntario de apretar o rechinar los dientes, generalmente durante el sueño, aunque también puede ocurrir durante el día. Esta condición puede causar desgaste dental, dolor facial y problemas en la mandíbula si no se trata adecuadamente. Según <cite>Cifuentes-Harris</cite>, <q lang="en">Bruxism is defined as a repetitive muscular activity of the jaw, characterized by clenching, or grinding of the teeth due to dragging or thrusting of the jaw</q>.
+        </p>
     </section>
     <section>
         <h3>Causas</h3>
@@ -76,11 +88,10 @@
             <caption>Bruxismo en España: prevalencia por síntomas y género. Estudio realizado a 10.000 personas.</caption>
             <thead>
                 <tr>
-                    <th scope="col"></th>
+                    <th id="sintomas" scope="col" rowspan="2">Síntomas</th>
                     <th colspan="3" scope="colgroup">Género</th>
                 </tr>
                 <tr>
-                    <th id="sintomas" scope="col">Síntomas</th>
                     <th id="hombres" scope="col">Hombres</th>
                     <th id="mujeres" scope="col">Mujeres</th>
                     <th id="otros" scope="col">Otros</th>
@@ -109,7 +120,7 @@
         </table>
     </section>
     </article>
-    <nav>
+    <nav aria-label="Navegación de regreso a índice B">
      <p><a href="../indexb.html">Volver a Índice B</a></p>
     </nav>
     <footer>
