--- a/B/PatologiasB/bulimia.html
+++ b/B/PatologiasB/bulimia.html
@@ -3,15 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Bulimia - MediUA</title>
+    <link rel="stylesheet" href="../../CSS/migas.css">
 </head>
 <body>
     <header>
         <h1><a href="../../index.html">MediUA</a></h1>
     </header>
+    <div class="breadcrumb-container">
+        <span class="breadcrumb-label">Estás en:</span>
+        <nav aria-label="migas de pan">
+            <ol class="breadcrumbs">
+                <li class="breadcrumb-item"><a href="../../index.html">Enciclopedia médica</a></li>
+                <li class="breadcrumb-item"><a href="../indexb.html">Enciclopedia médica: B</a></li>
+                <li class="breadcrumb-item">Bulimia</li>
+            </ol>
+        </nav>
+    </div>
     <article>
     <h2>Bulimia</h2>
     <figure>
-        <img src="../../Imagenes/bulimia.jpg" alt="Imagen de una persona con bulimia">
+        <img src="../../Imagenes/bulimia.jpg" alt="Persona con bulimia">
         <figcaption>Caricatura de una persona con náuseas debido a la bulimia</figcaption>
     </figure>
     <section id="descripcion">
@@ -29,6 +40,10 @@
             <li>Predisposición genética y desequilibrios químicos en el cerebro.</li>
             <li>Trastornos psicológicos coexistentes, como ansiedad o depresión.</li>
         </ul>
+        <p>También se ha observado com el IMC que se calcula mediante la expresión: <code>peso / (altura * altura)</code>, causa trastornos alimenticios como la bulimia.</p>
+        <blockquote cite="https://revista.nutricion.org/PDF/361castejon.pdf">
+            “Un mayor IMC se relaciona con una mayor obsesión por la delgadez e insatisfacción corporal, factores de riesgo de TCA, mostrando los sujetos mayor preocupación por el cuerpo, las dietas y miedo a engordar, además de descontento con la forma de su cuerpo.”
+        </blockquote>
     </section>
 
     <section>
@@ -70,8 +85,16 @@
         <h3>Pronóstico</h3>
         <p>Con tratamiento adecuado y seguimiento continuo, muchas personas con bulimia pueden recuperar hábitos alimentarios saludables y mejorar su bienestar emocional. Sin embargo, la recuperación puede ser gradual y requiere compromiso, apoyo profesional y familiar. La prevención de recaídas es fundamental mediante educación, terapia y control médico periódico.</p>
     </section>
+    <section>
+        <h3>Datos y estadísticas</h3>
+        <p>Entre los años 2011 y 2023, se registró un aumento considerable del número de personas que padecen bulimia, el siguiente gráfico muestra el aumento del número de casos de la patología: </p>
+        <figure>
+            <img src="../../Imagenes/g_bulimia.png" alt="Aumento de los casos de bulimia desde 2011 hasta 2023" longdesc="El gráfico de barras muestra la evolución del número de casos registrados entre los años 2011 y 2023. En el eje vertical se indica el “Número de casos”, con valores que van desde 0 hasta 100.000, mientras que en el eje horizontal se presentan los años del 2011 al 2023. Se observa una tendencia general al alza a lo largo del periodo: en 2011 el número de casos se sitúa en torno a 15.000, entre 2012 y 2014 aumenta progresivamente hasta cerca de 35.000, en 2015 y 2016 supera los 60.000, y a partir de 2017 el crecimiento se mantiene de forma sostenida, alcanzando alrededor de 80.000 casos y llegando en 2023 a aproximadamente 90.000, el valor más alto del periodo. En conjunto, el gráfico refleja un crecimiento constante del fenómeno representado entre 2011 y 2023, sin descensos significativos.">
+            <figcaption>Tendencia creciente en los casos de bulimia</figcaption>
+        </figure>
+    </section>
     </article>
-    <nav>
+    <nav aria-label="Navegación de regreso a índice B">
     <a href="../indexb.html">Volver a Ínidce B</a>
     </nav>
     <footer>
