--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="utf-8">
     <title>Página de contacto - MediUA</title>
+    <link rel="stylesheet" href="../CSS/migas.css">
 </head>
 <body>
     <header>
         <h1><a href="../index.html">MediUA</a></h1>
     </header>
+    <div class="breadcrumb-container">
+        <span class="breadcrumb-label">Estás en:</span> <!--Etiqueta para lectores de pantalla y para que esté todo en una misma línea-->
+        <nav aria-label="migas de pan">
+            <ol class="breadcrumbs">
+                <li class="breadcrumb-item"><a href="../index.html">Enciclopedia médica</a></li>
+                <li class="breadcrumb-item">Página de contacto</li>
+            </ol>
+        </nav>
+    </div>
     <main>
         <h2>Formulario de contacto</h2>
         <form action="resp_contacto.html" method="get">
