--- a/Usuario/perfil.html
+++ b/Usuario/perfil.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="utf-8">
     <title>Perfil de usuario - MediUA</title>
+    <link rel="stylesheet" href="../CSS/migas.css">
 </head>
 <body>
     <header>
         <h1><a href="../index.html">MediUA</a></h1>
     </header>
+    <div class="breadcrumb-container">
+        <span class="breadcrumb-label">Estás en:</span> <!--Etiqueta para lectores de pantalla y para que esté todo en una misma línea-->
+        <nav aria-label="migas de pan">
+            <ol class="breadcrumbs">
+                <li class="breadcrumb-item"><a href="../index.html">Enciclopedia médica</a></li>
+                <li class="breadcrumb-item">Perfil de usuario</li>
+            </ol>
+        </nav>
+    </div>
     <main>
         <h2>Perfil de usuario</h2>
         <p>Complete los siguientes datos para crear su perfil de usuario.</p>
@@ -35,7 +45,7 @@
                 <label for="otro">Otro</label><br>
             </fieldset>
             <label for="peso">Peso corporal en kilogramos:</label>
-            <input type="number" id="peso" name="peso" min="0" max="500" step="0.5" placeholder="70.5"> kg<br>
+            <input type="number" id="peso" name="peso" min="30" max="500" step="0.5" placeholder="70.5"> kg<br>
             <label for="color_favorito">Color favorito:</label>
             <input type="color" id="color_favorito" name="color_favorito" value="#000000"><br>
             <label for="conocimietos">Nivel de conocimientos médicos (del 0 al 10):</label>
